--- a/.env
+++ b/.env
@@ -10,6 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=s465z7sj4pwhp7fn.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
 DB_PORT=3306
+DB_DATABASE=ocnj8fys76z2moef
+DB_USERNAME=xjniibyyygiec3st
+DB_PASSWORD=nv53y3g1wq65zn78
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
