--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:cxN/Ya8YWfUddUUmDdX57wBogK5G2l7kRlgSVcDVv78=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://afternoon-atoll-08010.herokuapp.com
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
